# Resume-Builder

./: README.md
backend/: .gitignore  llm_response.md  main.py  models.py  pyproject.toml  requirements.txt  resume_generator.py
frontend/myapp/src/: App.js  index.css
frontend/myapp/src/Component/: resumeGenerator.css  resume_generator.jsx
